--- a/WebViewApp/app/src/main/res/layout/fragment_label.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_label.xml
@@ -20,11 +20,13 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_text" />
 
     <LinearLayout
+        android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.example.webviewapp.ui.view.RecordEditButton
@@ -36,6 +38,13 @@
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/select_all"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal" />
+
+        <com.example.webviewapp.ui.view.RecordEditButton
+            android:id="@+id/cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
