[update]修改记录界面xml

--- a/WebViewApp/app/src/main/res/layout/fragment_label.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_label.xml
@@ -22,31 +22,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:background="@android:color/white"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/delete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="left|bottom" />
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/select_all"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center"
+            android:layout_weight="1" />
 
         <com.example.webviewapp.ui.view.RecordEditButton
             android:id="@+id/edit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="right" />
 
     </LinearLayout>
 
