--- a/WebViewApp/app/src/main/res/layout/fragment_history.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_history.xml
@@ -31,6 +31,7 @@
             android:id="@+id/delete_all"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1" />
 
