--- a/WebViewApp/app/src/main/res/layout/record_edit_button.xml
+++ b/WebViewApp/app/src/main/res/layout/record_edit_button.xml
@@ -10,8 +10,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
+
+        />
 
     <TextView
         android:id="@+id/text"
