--- a/WebViewApp/app/src/main/res/layout/record_item.xml
+++ b/WebViewApp/app/src/main/res/layout/record_item.xml
@@ -14,17 +14,28 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Two line item" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:text="Two line item"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Secondary" />
+        android:layout_marginLeft="10dp"
+        android:text="Secondary"
+        android:textColor="#2F4F4F"
+        android:textSize="18sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/black" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#C0C0C0" />
 
 </LinearLayout>
