--- a/WebViewApp/app/src/main/res/layout/fragment_label.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_label.xml
@@ -16,6 +16,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         app:layout_constraintStart_toStartOf="@+id/edit_text"
         app:layout_constraintTop_toBottomOf="@+id/edit_text" />
 
