[new feature]个人登陆界面和注册界面，包括数据库的接口的是实现 [bugfixs]主页的返回键监听，设置为webview返回上一层

--- a/WebViewApp/app/src/main/res/layout/activity_main.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:scaleX="-1"
             app:srcCompat="@drawable/abc_vector_test" />
 
         <ImageButton
