--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -6,34 +6,45 @@
 
 
     <LinearLayout
-        android:layout_width="306dp"
+        android:layout_width="match_parent"
         android:layout_height="46dp"
         android:layout_marginBottom="96dp"
         android:orientation="horizontal"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="59dp"
+            android:id="@+id/addbookmark"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/presence_offline" />
+            android:src="@drawable/addbookmark" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="65dp"
+            android:id="@+id/bookmarkAndhistory"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_recent_history" />
+            android:layout_margin="5dp"
+            android:src="@drawable/bookmarkhistory" />
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="54dp"
+            android:id="@+id/share"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_margin="5dp"
+            android:src="@drawable/share" />
+
+        <ImageView
+            android:id="@+id/refresh"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:src="@drawable/refresh" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
