--- a/WebViewApp/app/src/main/res/layout/activity_main.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_main.xml
@@ -41,11 +41,7 @@
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:queryBackground="@drawable/bg_searchview"
-        app:showAsAction="always"
-
-
-        />
+        app:showAsAction="always" />
 
     <LinearLayout
         android:layout_width="match_parent"
