--- a/WebViewApp/app/src/main/res/layout/activity_record.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_record.xml
@@ -7,18 +7,17 @@
     android:orientation="vertical"
     tools:context=".ui.activity.RecordActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:background="@color/white">
 
         <ImageButton
             android:id="@+id/back_btn"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
             android:adjustViewBounds="true"
             android:background="@android:color/white"
             android:scaleType="centerInside"
@@ -42,10 +41,12 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="9"
             android:background="@color/white"
-            android:scrollbarSize="22dp" />
+            android:scrollbarSize="20dp" />
 
         <!--        </com.google.android.material.appbar.AppBarLayout>-->
 
@@ -68,7 +69,7 @@
         <!--            app:srcCompat="@drawable/search"-->
         <!--            android:visibility="gone"/>-->
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
