--- a/WebViewApp/app/src/main/res/layout/record_edit_button.xml
+++ b/WebViewApp/app/src/main/res/layout/record_edit_button.xml
@@ -12,10 +12,7 @@
         android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text"
