--- a/WebViewApp/app/src/main/res/layout/activity_main.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,9 @@
 
     <WebView
         android:id="@+id/webview"
-        android:layout_width="411dp"
-        android:layout_height="565dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="408dp"
+        android:layout_height="605dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -28,8 +28,8 @@
 
     <ListView
         android:id="@+id/listitem"
-        android:layout_width="416dp"
-        android:layout_height="363dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/searchbar" />
@@ -44,8 +44,8 @@
         app:showAsAction="always" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_width="405dp"
+        android:layout_height="32dp"
         android:layout_marginBottom="5dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
