--- a/WebViewApp/app/src/main/res/layout/record_item.xml
+++ b/WebViewApp/app/src/main/res/layout/record_item.xml
@@ -25,6 +25,8 @@
         android:text="Two line item"
         android:textColor="@color/black"
         android:textSize="18sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date" />
 
