--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -6,45 +6,44 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
+        android:layout_width="391dp"
+        android:layout_height="67dp"
         android:layout_marginBottom="96dp"
-        android:orientation="horizontal"
         android:background="@color/white"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/addbookmark"
-            android:layout_width="0dp"
+            android:id="@+id/add_lable"
+            android:layout_width="11dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/addbookmark" />
 
         <ImageView
-            android:id="@+id/bookmarkAndhistory"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:id="@+id/lable_history"
+            android:layout_width="38dp"
+            android:layout_height="67dp"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             android:src="@drawable/bookmarkhistory" />
 
         <ImageView
-            android:id="@+id/share"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:src="@drawable/share" />
-
-        <ImageView
             android:id="@+id/refresh"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="28dp"
+            android:layout_height="67dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:src="@drawable/refresh" />
+
+        <ImageView
+            android:id="@+id/user_button"
+            android:layout_width="7dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
