--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -2,35 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/menu"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="10dp"
-        >
 
-        <ImageView
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/edit"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="用户中心"
-            android:textSize="15sp"/>
-
-    </LinearLayout>
 
 
     <LinearLayout
         android:id="@+id/menu"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="96dp"
         android:orientation="horizontal"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +22,7 @@
             android:id="@+id/addbookmark"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginVertical="5dp"
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/addbookmark_text"
@@ -53,19 +34,22 @@
                 android:text="添加"
                 android:textColor="@color/black"
                 android:textSize="14sp"/>
+
             <ImageView
                 android:id="@+id/addbookmark_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@id/addbookmark_text"
+                android:layout_marginBottom="3dp"
                 android:layout_weight="1"
-                android:src="@drawable/addbookmark" />
+                android:src="@drawable/uncollected" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/bookmarkAndhistory"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginVertical="5dp"
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/history_text"
@@ -90,6 +74,7 @@
             android:id="@+id/refresh"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginVertical="5dp"
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/refresh_text"
@@ -109,6 +94,32 @@
                 android:layout_weight="1"
                 android:src="@drawable/refresh" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/user_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginVertical="5dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/user_button_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="刷新"
+                android:textColor="@color/black"
+                android:textSize="14sp"/>
+            <ImageView
+                android:id="@+id/user_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@id/user_button_text"
+                android:layout_weight="1"
+                android:src="@drawable/yonghu" />
+        </RelativeLayout>
+
 
 
 
