--- a/WebViewApp/app/src/main/res/layout/loginwindow.xml
+++ b/WebViewApp/app/src/main/res/layout/loginwindow.xml
@@ -9,22 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:layout_marginHorizontal="10dp">
 
         <EditText
             android:id="@+id/UserNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="number" />
+            android:inputType="number"
+            android:hint="输入用户名"/>
 
         <EditText
             android:id="@+id/loginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:hint="输入密码"
             android:inputType="numberPassword" />
 
         <LinearLayout
@@ -37,14 +38,16 @@
                 android:layout_width="71dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Login" />
+                android:text="Login"
+                android:layout_marginHorizontal="5dp"/>
 
             <Button
                 android:id="@+id/cancelButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="EXIT" />
+                android:text="EXIT"
+                android:layout_marginHorizontal="5dp"/>
 
         </LinearLayout>
 
