--- a/WebViewApp/app/src/main/res/layout/activity_edit_record.xml
+++ b/WebViewApp/app/src/main/res/layout/activity_edit_record.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:text="编辑书签"
             android:textSize="22sp"
+            android:layout_marginLeft="10dp"
             app:layout_constraintBottom_toBottomOf="@id/back_button"
             app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintTop_toTopOf="@id/back_button" />
