--- a/WebViewApp/app/src/main/res/layout/signupactivity.xml
+++ b/WebViewApp/app/src/main/res/layout/signupactivity.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
@@ -16,16 +17,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="number" />
+            android:inputType="number"
+            android:hint="输入用户名"
+
+            />
 
         <EditText
             android:id="@+id/loginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="numberPassword" />
+            android:inputType="numberPassword"
+            android:hint="输入密码"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,17 +37,19 @@
 
             <Button
                 android:id="@+id/signupButton"
-                android:layout_width="71dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="SignUp" />
+                android:text="SignUp"
+                android:layout_margin="5dp"/>
 
             <Button
                 android:id="@+id/cancelButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="EXIT" />
+                android:text="EXIT"
+                android:layout_margin="5dp"/>
 
         </LinearLayout>
 
