--- a/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
+++ b/WebViewApp/app/src/main/res/layout/menu_mainpage.xml
@@ -5,8 +5,6 @@
     android:background="@color/black"
     android:layout_height="match_parent">
 
-
-
     <LinearLayout
         android:id="@+id/menu"
         android:layout_width="match_parent"
@@ -66,7 +64,7 @@
                 android:layout_height="match_parent"
                 android:layout_above="@id/history_text"
                 android:layout_weight="1"
-                android:src="@drawable/bookmarkhistory" />
+                android:src="@drawable/record" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -110,13 +108,14 @@
                 android:text="刷新"
                 android:textColor="@color/black"
                 android:textSize="14sp"/>
+
             <ImageView
                 android:id="@+id/user_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@id/user_button_text"
                 android:layout_weight="1"
-                android:src="@drawable/yonghu" />
+                android:src="@drawable/user" />
         </RelativeLayout>
 
     </LinearLayout>
