--- a/WebViewApp/app/src/main/res/layout/signupactivity.xml
+++ b/WebViewApp/app/src/main/res/layout/signupactivity.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SignupActivity">
+    tools:context=".ui.activity.SignUpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
