--- a/WebViewApp/app/src/main/res/layout/signupactivity.xml
+++ b/WebViewApp/app/src/main/res/layout/signupactivity.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-             />
+            android:gravity="center" />
 
         <EditText
             android:id="@+id/loginPassword"
