--- a/WebViewApp/app/src/main/res/layout/fragment_first.xml
+++ b/WebViewApp/app/src/main/res/layout/fragment_first.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.UserActivity">
 
-    <Button
-        android:id="@+id/button_first"
-        android:layout_width="101dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="92dp"
-        android:text="@string/login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
@@ -30,14 +19,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/signupButton"
-        android:layout_width="110dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginLeft="148dp"
-        android:layout_marginTop="32dp"
+        android:id="@+id/button_first"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/imageView4"
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
+        app:layout_constraintEnd_toEndOf="@id/imageView4"
+        android:text="@string/login"
+        />
+    <Button
+        android:id="@+id/button_signup"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/button_first"
+        app:layout_constraintTop_toBottomOf="@id/button_first"
+        app:layout_constraintEnd_toEndOf="@id/button_first"
         android:text="去注册"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_first" />
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
