--- a/WebViewApp/app/src/main/res/layout/loginwindow.xml
+++ b/WebViewApp/app/src/main/res/layout/loginwindow.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginHorizontal="10dp"
         tools:ignore="MissingConstraints">
 
         <EditText
@@ -16,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:hint="输入用户名"
              />
 
         <EditText
@@ -24,8 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
-            android:inputType="numberPassword" />
+            android:inputType="numberPassword"
+            android:hint="输入密码"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,6 +38,7 @@
                 android:layout_width="71dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginHorizontal="10dp"
                 android:text="Login" />
 
             <Button
@@ -44,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginHorizontal="10dp"
                 android:text="EXIT" />
 
         </LinearLayout>
